Second commit to CV in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--2.Adding image and bio to a table, cell spacing-->
     <table cellspacing="20">
         <tr>
-            <td><img src="/1. HTML Personal Site/images/avantika.png" alt=""></td>
+            <td><img src="images/avantika.png" alt=""></td>
             <td><h1>Avantika Sharma</h1>
                 <p><em>Aspiring <strong>Full-Stack Developer</strong></em></p>
                 <p>I am a computer science graduate with a strong passion for <a href="https://in.teabox.com/" target="_blank">music</a></p>
@@ -76,7 +76,7 @@
         </tr>
     </table>
     <hr>
-    <a href="/1. HTML Personal Site/hobbies.html">My Hobbies</a>
-    <a href="/1. HTML Personal Site/contact.html">Contact Me</a>
+    <a href="hobbies.html">My Hobbies</a>
+    <a href="contact.html">Contact Me</a>
 </body>
 </html>
